--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/developerdizzle/react-virtual-list.git"
+    "url": "https://github.com/clertonraf/react-virtual-list.git"
   },
   "keywords": [
     "react",
@@ -24,31 +24,31 @@
     "scroll",
     "performance"
   ],
-  "author": "developerdizzle",
+  "author": "clertonraf",
   "bugs": {
-    "url": "https://github.com/developerdizzle/react-virtual-list/issues"
+    "url": "https://github.com/clertonraf/react-virtual-list/issues"
   },
-  "homepage": "https://github.com/developerdizzle/react-virtual-list",
+  "homepage": "https://github.com/clertonraf/react-virtual-list",
   "dependencies": {
     "prop-types": "^15.5.10"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
-    "babel-jest": "^17.0.2",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "file-loader": "^0.9.0",
-    "gulp": "^3.8.11",
+    "gulp": "^4.0.2",
     "gulp-react": "^3.0.1",
-    "jasmine-node": "^1.14.5",
-    "jest": "^17.0.3",
+    "jasmine-node": "^3.0.0",
+    "jest": "^26.0.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.3.1",
-    "webpack": "^1.13.3"
+    "webpack": "^4.43.0"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
