--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-virtual-list",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Super simple virtualized list React higher-order component",
   "main": "lib/VirtualList.js",
   "directories": {
-    "test": "test"
+    "lib": "lib"
   },
   "scripts": {
     "build": "babel src --out-dir lib --copy-files --ignore tests",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/clertonraf/react-virtual-list.git"
+    "url": "git+https://github.com/clertonraf/react-virtual-list.git"
   },
   "keywords": [
     "react",
@@ -53,5 +53,6 @@
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
-  }
+  },
+  "license": "ISC"
 }
